# redacta

./: .gitignore  ReadMe.md  demo.py  pyproject.toml
redacta/: __init__.py  decorators.py  types.py
redacta/adapters/: __init__.py  anthropic.py  openai.py  openai_chat.py  openai_responses.py
redacta/config/: __init__.py  settings.py
redacta/core/: __init__.py  mapping_store.py  pii_spacy.py  pipeline.py  placeholders.py
redacta/kms/: __init__.py  local.py
tests/: test_decorator.py  test_pipeline.py
